Archive2/0e/5e94d7d15945a5/output
main.cpp: In function ‘int main()’:
main.cpp:21:5: error: non-constant condition for static assertion
     static_assert( a.clearly_not_compile_time_get_null() == 0, "Woo!" );
     ^
main.cpp:21:56: error: call to non-constexpr function ‘int x::clearly_not_compile_time_get_null()’
     static_assert( a.clearly_not_compile_time_get_null() == 0, "Woo!" );
                                                        ^
